<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/newsfeed"
        android:title="@string/news_feed" />

    <item
        android:id="@+id/navigation_test"
        android:icon="@drawable/testlocation"
        android:title="@string/test_location" />

    <item
        android:id="@+id/navigation_tracking"
        android:icon="@drawable/tracking"
        android:title="@string/title_tracking" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/setting"
        android:title="@string/title_setting" />





</menu>